Fixing grammar errors and picturing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -84,11 +84,13 @@ h1, h2, h3, h4, h5,
   padding-bottom: 20px;
   margin-bottom: 0px;
   position: relative;
-  font-size: 2.5rem; }
+  font-size: 2.5rem;
+   }
   @media (min-width: 768px) {
     .site-section-heading {
-      font-size: 3rem; } }
-
+      font-size: 3rem; }
+    }
+      
 .border-top {
   border-top: 1px solid #edf0f5 !important; }
 
